# rustico

./: .gitignore  Cargo.toml  LICENSE  README.md  nes_tests_all.txt  nes_tests_apu.txt  nes_tests_cpu.txt  nsf_piano_roll.sh  nsf_piano_roll_1080p.sh  nsf_piano_roll_discord.sh  nsf_piano_roll_discord_1080p.sh  nsf_piano_roll_discord_720p.sh  package.sh  test.toml
.github/: FUNDING.yml
.github/workflows/: package.yml
cli/: .gitignore  Cargo.toml  README.md  nes_tests_apu.txt  nes_tests_cpu.txt  nsf_piano_roll.sh  run_tests.sh
cli/configs/: piano_roll_1080p.toml  piano_roll_270p.toml  piano_roll_colors.toml
cli/src/: main.rs
configs/: piano_roll_1080p.toml  piano_roll_270p.toml  piano_roll_480p.toml  piano_roll_720p.toml  piano_roll_colors.toml
core/: Cargo.toml  README.md
core/src/: ines.rs  lib.rs  nsf.rs
core/src/mmc/: mapper.rs  mmc3.rs  mmc5.rs  nsf.rs  rainbow.rs  vrc7.rs
egui/: Cargo.toml  README.md
egui/src/: app.rs  game_window.rs  input_window.rs  main.rs  worker.rs
gnu-mingw/lib/32/: libSDL2.la  libSDL2_test.la  libSDL2main.la
gnu-mingw/lib/32/pkgconfig/: sdl2.pc
gnu-mingw/lib/64/: libSDL2.la  libSDL2_test.la  libSDL2main.la
gnu-mingw/lib/64/pkgconfig/: sdl2.pc
sdl/: Cargo.toml  README.md  package.sh
sdl/.github/workflows/: package.yml
sdl/src/: cartridge_manager.rs  main.rs  platform_window.rs
src/: application.rs  apu_window.rs  audio_window.rs  cartridge_manager.rs  cpu_window.rs  debugger_window.rs  drawing.rs  event_window.rs  events.rs  game_window.rs  lib.rs  main.rs  memory_window.rs  panel.rs  piano_roll_window.rs  platform_window.rs  ppu_window.rs  settings.rs  test_window.rs  vram_window.rs
ui-common/: Cargo.toml  README.md
ui-common/src/: application.rs  apu_window.rs  cpu_window.rs  drawing.rs  event_window.rs  events.rs  game_window.rs  lib.rs  memory_window.rs  piano_roll_window.rs  ppu_window.rs  settings.rs
ui-common/src/assets/: rustico_no_cart.nes
wasm/: .gitignore  Cargo.toml  README.md  build.sh  make_itch_embed.sh
wasm/public/: emu_main.js  emu_worker.js  index.html  keyboard_input.js  rustico.js  rustico_audio_processor.js  style.css  touch_input.css  touch_input.js  ui_main.js
wasm/public_old/: embed.html
wasm/rustico-itch.io-embed/: index.html
wasm/src/: lib.rs
