[package]
name = "rusticnes-cli"
version = "0.1.0"
authors = ["Nicholas Flynt <thegamefreak0134@gmail.com>"]

[dependencies]
image = "0.19"
rusticnes-core = { git = "https://github.com/zeta0134/rusticnes-core", rev = "86c532d1e053df979d1789696f68e92c0ae3dfaf" }
rusticnes-ui-common = { git = "https://github.com/zeta0134/rusticnes-ui-common", rev="252dba7c81501822dc3f10a46dd1398be9b1eea7" }