[package]
name = "rusticnes-sdl"
version = "0.1.1"
authors = ["Nicholas Flynt <thegamefreak0134@gmail.com>"]
build = "build.rs"

[dependencies]
dirs = "5.0.1"
image = "0.24.6"
sdl2 = "0.35.2"
nfd2 = "0.3.1"
rusticnes-core = { git = "https://github.com/zeta0134/rusticnes-core", rev = "86c532d1e053df979d1789696f68e92c0ae3dfaf" }
rusticnes-ui-common = { git = "https://github.com/zeta0134/rusticnes-ui-common", rev = "b5b79c2ec1ff81cec5b31cfdfcb43ffdd00657b5" }
