[package]
name = "rusticnes-ui-common"
version = "0.0.1"
authors = ["Nicholas Flynt <zeta0134@reploid.cafe>"]

[dependencies]
csscolorparser = "0.6.1"
image = "0.19"
toml = "0.5"
regex = "1.6"
rusticnes-core = { git = "https://github.com/zeta0134/rusticnes-core", rev = "be6ef2c7cd3d654846e67888aa3091aa8d310a0a" }
