[package]
name = "rusticnes-egui"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15.3"
lazy_static = "1.0"
eframe = { version = "0.26.2", features = [
    "default"    
] }
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
rusticnes-core = { path = "../core" }
rusticnes-ui-common = { path = "../ui-common" }

