[package]
name = "rustico-egui"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15.3"
eframe = { version = "0.26.2", features = [
    "default"
] }
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
lazy_static = "1.0"
rfd = { version = "0.14.1", default-features = false, features = [
    "async-std",
    "xdg-portal"
] }
rustico-core = { path = "../core" }
rustico-ui-common = { path = "../ui-common" }
