[package]
name = "rustico-wasm"
version = "0.1.0"
authors = ["Nicholas Flynt <zeta0134@reploid.cafe>"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.0"
wasm-bindgen = "0.2.92"
rustico-core = { path = "../core" }
rustico-ui-common = { path = "../ui-common" }

